Issue #SB-13475 fix: Library Page: Practice and test material section count label and View all button is overlapping.

--- a/src/app/client/src/assets/styles/global.scss
+++ b/src/app/client/src/assets/styles/global.scss
@@ -69,6 +69,11 @@ body {
     padding-bottom: $base-block-space * 3;
   }
 }
+@include respond-below(xs) {
+  .sb-pageSection-title.sb-pageSection-sentenceCase {
+    max-width: 45%;
+  }
+}
 .sb-offline {
   padding-bottom: 0px;
   // .footer-fix {
